--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -25,6 +25,7 @@
       color: #000;
       font-size: 20px;
       font-weight: 700;
+      text-align: center;
     }
 
     svg {
